# libcomps

./: .packit.yaml  MANIFEST.in  README.md  build_prep.cmake  libcomps.spec  pyproject.toml  rel-bump.py  ver-bump.py
libcomps/: CMakeLists.txt
libcomps/src/python/src/: CMakeLists.txt
libcomps/tests/: check_list.c
